--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "Laranote — Highlights & Notes",
   "description": "Shows a small toolbar when you select text: highlight, add note, copy text, or remove highlight. Saves notes per-URL.",
   "version": "1.0.0",
+  "homepage_url": "https://emadrashad.github.io/LaraNote/",
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
