--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Laranote — Highlights & Notes",
   "description": "Shows a small toolbar when you select text: highlight, add note, copy text, or remove highlight. Saves notes per-URL.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "homepage_url": "https://emadrashad.github.io/LaraNote/",
   "icons": {
     "16": "icons/icon16.png",
@@ -11,9 +11,7 @@
     "128": "icons/icon128.png"
   },
   "permissions": [
-    "storage",
-    "activeTab",
-    "scripting"
+    "storage"
   ],
   "content_scripts": [
     {
